# Book_publisher_1

./: .env  .env.example  .env.save  .gitignore  Dockerfile  README.md  diagnose_screenshots.py  diagnose_user.py  docker-compose.yml  nginx.conf  railway.toml  start.sh
backend/: .dockerignore  .env  .env.example  Dockerfile  check_agent_user.py  check_db.py  check_ids.py  check_superadmin.py  clear_agent_backlog.py  debug_query.py  drop_all.py  init_superadmin.py  inspect_db.py  inspect_monitoring_db.py  list_fastapi_routes.py  list_users_debug.py  monitoring.db  nixpacks.toml  pyproject.toml  scratch_test_monitoring.py  trigger_registration.py  validate_beanie_link.py  verify_screenshots.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/api_v1/: api.py
backend/app/core/: celery_app.py  config.py  database.py  gmail_service.py  permissions.py  rate_limit.py  scheduler.py  security.py  storage.py  time_utils.py  whatsapp_service.py
backend/app/modules/core/: crypto.py  endpoints.py  models.py  schemas.py  services.py  utils.py
backend/app/modules/educational/: endpoints.py  models.py  services.py
backend/app/modules/generic/: endpoints.py  integrity.py  integrity_endpoints.py  models.py  monitoring_endpoints.py  monitoring_models.py  publishing.py  rights_endpoints.py  rights_models.py  schemas.py  tasks.py  (+1 more)
backend/mcp_server/: main.py  tools.py
backend/scripts/: diagnose_content.py  doctor.py  set_copyleaks_keys.py  verify_tasks.py
backend/tests/: conftest.py  test_content_crud.py  test_task_manager_rules.py  test_tasks_extended.py
(+83 files in other folders)
